--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,12 +1,21 @@
-//filter div
-.row-fluid .span6 {
-    width: 100%;
-}
-
 .row .col-md-4 .fabrikFilterContainer {
     margin-top: 4px;
 }
 
 ul.jqtree-tree {
     margin-top: 3px;
+}
+
+@media (min-width: 768px) {
+    .col-md-2 {
+        flex: 0 0 16.6666666667%;
+        max-width: 16.6666666667%;
+    }
+}
+
+@media (min-width: 768px) {
+    .col-md-10 {
+        flex: 0 0 83.3333333333%;
+        max-width: 83.3333333333%;
+    }
 }
