--- a/scss/versla-joomla/_core.scss
+++ b/scss/versla-joomla/_core.scss
@@ -41,7 +41,28 @@
     box-shadow: inset -1px -1px 1px rgba(0, 0, 0, 0.15);
 }
 
+.dropdown-menu > li > button {
+    width: 100%;
+    text-align: left;
+	display: block;
+	padding: 3px 20px;
+	clear: both;
+	font-weight: normal;
+	line-height: 20px;
+	color: #333333;
+    white-space: nowrap;
+    background-color: #ffffff;
+    transition: all 0.2s;
+}
+
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-submenu:hover > a, .dropdown-submenu:focus > a {
+    background-image: none;
+    background: $accent-color-1;
+    color: $base-text-color !important;
+    border: 1px solid $border-color-light;
+}
+
+.dropdown-menu > li > button:hover, .dropdown-menu > li > button:focus, .dropdown-submenu:hover > a, .dropdown-submenu:focus > button {
     background-image: none;
     background: $accent-color-1;
     color: $base-text-color !important;
